--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="coop">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <script src="./lib/angular.min.js"></script>
-    <script src="./lib/angular-resource.min.js"></script>
-    <script src="./app.js"></script>
-    <title>Co'OP</title>
+      <meta charset="UTF-8" />
+      <script src="./lib/angular.min.js"></script>
+      <script src="./lib/angular-resource.min.js"></script>
+      <script src="./js/app.js"></script>
+      <title>Co'OP</title>
   </head>
   <body ng-controller="StartController">
   </body>
