--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html ng-app="coop">
   <head>
       <meta charset="UTF-8" />
-      <script src="./lib/angular.min.js"></script>
-      <script src="./lib/angular-resource.min.js"></script>
-      <script src="./js/app.js"></script>
+      <script type="text/javascript" src="./lib/jquery-3.1.1.min.js"></script>
+      <script type="text/javascript" src="./lib/angular.min.js"></script>
+      <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
+      <script type="text/javascript" src="./lib/angular-route.min.js"></script>
+      <script type="text/javascript" src="./js/app.js"></script>
       <title>Co'OP</title>
   </head>
-  <body ng-controller="StartController">
+  <div ng-controller="StartController">
+    <div ng-view></div>
+  </div>
   </body>
 </html>
