--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="coop">
+<html>
   <head>
       <meta charset="UTF-8" />
       <script type="text/javascript" src="./lib/jquery-3.1.1.min.js"></script>
@@ -9,8 +9,10 @@
       <script type="text/javascript" src="./js/app.js"></script>
       <title>Co'OP</title>
   </head>
-  <div ng-controller="StartController">
-    <div ng-view></div>
-  </div>
+  <body ng-app="coop">
+    <h3>
+    <div class="container">
+      <div ng-view></div>
+    </div>
   </body>
 </html>
