--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="./lib/angular.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./lib/angular-route.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="./app/app.js"></script>
     <script type="text/javascript" src="./app/route.js"></script>
     <link rel="stylesheet" href="./css/bootstrap.css" />
