--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body ng-app="app">
   <h3 class="text-center">Projet Coop -- Angular 1 JS</h3>
+  <h4 class="text-center">Victor REEB - Pierre Becker</h4>
   <hr>
   <div class="container">
     <div ng-view></div>
